--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
-title:  Lagrange
-tagline:  a minimalist Jekyll theme
+title:  Seonghui Lee
+tagline:  behavioral political scientist
 author:
   name: 'Paul Le'
   twitter:  paululele
