--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,5 +1,5 @@
 title:  Seonghui Lee
-tagline:  behavioral political scientist
+tagline:  
 author:
   name: 'Paul Le'
   twitter:  paululele
@@ -12,9 +12,12 @@ disqus:
 google-ID: 'UA-44147916-1'
 
 menu:
-- {name: 'About', url: 'about.html'}
+- {name: 'About', url: '..'}
 - {name: 'Research', url: 'research.html'}
-- {name: 'Contact', url: 'contact.html'}
+- {name: 'Teaching', url: 'teaching.html'}
+- {name: 'Vitae', url: '../files/cvLee.pdf'}
+- {name: 'Links', url: 'links.html'}
+#- {name: 'Contact', url: 'contact.html'}
 
 social:
 - {icon: 'github', link: 'https://www.github.com/seonghuilee'}
