--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,4 @@ title:		     "{{ site.data.settings.title }} | {{ site.data.settings.tagline }}"
 # RSS 2.0 can be used instead of Atom by uncommenting following two lines
 #feed:
 #   path:	     rss-feed.xml
+exclude: [old_files]
