fixed email address

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -23,6 +23,6 @@ social:
 #- {icon: 'github', link: 'https://www.github.com/seonghuilee'}
 - {icon: 'university', link: 'http://pure.au.dk/portal/en/persons/id(3a41942b-2f04-4d63-9389-aa5cae084a81).html'}
 - {icon: 'twitter', link: 'https://twitter.com/seonghuilee'}
-- {icon: 'envelope', link: 'mailto:seonghui.lee@gmail.com'}
+- {icon: 'envelope', link: 'mailto:slee@ps.au.dk'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer (http://fontawesome.io/icons/)
