--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,8 +21,8 @@ menu:
 
 social:
 #- {icon: 'github', link: 'https://www.github.com/seonghuilee'}
-- {icon: 'university', link: 'http://pure.au.dk/portal/en/persons/id(3a41942b-2f04-4d63-9389-aa5cae084a81).html'}
+- {icon: 'university', link: 'https://www.essex.ac.uk/people/leese60806/seonghui-lee'}
 - {icon: 'twitter', link: 'https://twitter.com/seonghuilee'}
-- {icon: 'envelope', link: 'mailto:slee@ps.au.dk'}
+- {icon: 'envelope', link: 'mailto:s.lee@essex.ac.uk'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer (http://fontawesome.io/icons/)
